const mongoose = require('mongoose');

const orderItemSchema = new mongoose.Schema({
  name: { type: String, required: true },
  quantity: { type: Number, default: 1 },
  price: { type: Number, default: 0 },
  notes: String,
});

const measurementSnapshotSchema = new mongoose.Schema({
  height: Number,
  chest: Number,
  waist: Number,
  hips: Number,
  shoulder: Number,
  sleeve: Number,
  armLength: Number,
  legLength: Number,
  neck: Number,
}, { _id: false });

const attachmentSchema = new mongoose.Schema({
  filename: String,
  url: String,
  mimeType: String,
  size: Number,
  category: { type: String, enum: ['Sketch', 'Fabric', 'Receipt', 'Other'], default: 'Other' },
  uploadedAt: { type: Date, default: Date.now },
}, { _id: false });

const orderSchema = new mongoose.Schema({
  customer: { type: mongoose.Schema.Types.ObjectId, ref: 'Customer', required: true },
  items: [orderItemSchema],
  status: { type: String, enum: ['Order Placed', 'Pending', 'Pending Appointment', 'Cutting', 'Stitching', 'Trial', 'Ready', 'Delivered', 'Cancelled'], default: 'Order Placed' },
  totalAmount: { type: Number, default: 0 },
  measurementSnapshot: measurementSnapshotSchema, // snapshot at order time
  orderType: { type: String, default: '' },
  itemType: { type: String, default: '' },
  assignedTailor: { type: mongoose.Schema.Types.ObjectId, ref: 'User', default: null },
  acceptedByTailor: { type: Boolean, default: false },
  acceptedAt: { type: Date, default: null },
  workStartedAt: { type: Date, default: null },
  workStartedBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User', default: null },
  completedAt: { type: Date, default: null },
  completedBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User', default: null },
  changeRequests: [{
    request: { type: String, required: true },
    requestedBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User' },
    requestedAt: { type: Date, default: Date.now },
    status: { type: String, enum: ['pending', 'approved', 'rejected'], default: 'pending' },
    response: { type: String, default: '' },
    respondedAt: { type: Date, default: null },
    respondedBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User', default: null }
  }],
  fabric: {
    source: { type: String, enum: ['shop', 'customer', 'none'], default: 'none' },
    fabricId: { type: mongoose.Schema.Types.ObjectId, ref: 'Fabric' },
    name: { type: String, default: '' },
    code: { type: String, default: '' },
    type: { type: String, default: '' }, // Customer fabric type (Cotton, Silk, etc.)
    color: { type: String, default: '' },
    meters: { type: Number, default: 0 }, // Customer fabric quantity in meters
    quantity: { type: Number, default: 0 },
    unit: { type: String, default: 'm' },
    unitPrice: { type: Number, default: 0 },
    cost: { type: Number, default: 0 },
    notes: { type: String, default: '' },
  },
  customizations: {
    embroidery: {
      enabled: { type: Boolean, default: false },
      type: { type: String, enum: ['hand','machine','zardosi','aari','bead','thread','resham','mirror','chikankari'], default: 'machine' },
      placements: [{ type: String, enum: ['collar','sleeves','neckline','hem','full','custom','border','back','all-over'] }],
      pattern: { type: String, enum: ['floral','geometric','custom','paisley','abstract'], default: 'floral' },
      colors: [{ type: String }],
      notes: { type: String, default: '' },
      status: { type: String, enum: ['pending','complete'], default: 'pending' },
      pricing: {
        unitPrice: { type: Number, default: 0 },
        quantity: { type: Number, default: 1 },
        total: { type: Number, default: 0 },
      }
    }
  },
  orderDate: { type: Date, default: Date.now },
  expectedDelivery: { type: Date, default: null },
  stage: { type: String, enum: ['Cutting', 'Stitching', 'Finishing', 'Ready'], default: 'Cutting' },
  notes: String,
  attachments: [attachmentSchema],
}, { timestamps: true });

module.exports = mongoose.model('Order', orderSchema);